<resources>
    <string name="app_name">Controlo Remoto Acessível</string>
    <string name="action_settings">Definições</string>
    <string name="title_activity_settings">Definições</string>
    <string name="pref_user_profile">Prefile de Utilizador</string>
    <string name="user_id">Nome de Utilizador</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_user_type">Reading options</string>
    <string-array name="pref_user_type_entries">
        <item>Cego</item>
        <item>Algum Resíduo Visual</item>
    </string-array>
    <string-array name="pref_user_type_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_reading_mode">Reading options</string>
    <string-array name="pref_reading_mode_entries">
        <item>Detalhado</item>
        <item>Conciso</item>
    </string-array>
    <string-array name="pref_reading_mode_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_interact_mode">Opções</string>
    <string-array name="pref_interact_mode_entries">
        <item>TV</item>
        <item>Sequêncial</item>
    </string-array>
    <string-array name="pref_interact_mode_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_focus_mode">Focused Feedback options</string>
    <string-array name="pref_focus_mode_entries">
        <item>Focused and Siblings</item>
        <item>Map</item>
    </string-array>
    <string-array name="pref_focus_mode_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_gesture_mode">Reading options</string>
    <string-array name="pref_gesture_mode_entries">
        <item>Fletir o pulso com a mão aberta na direcção desejada</item>
        <item>Manter punho fechado e direccionar o antebraço para a direcção desejada</item>
    </string-array>
    <string-array name="pref_gesture_mode_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="ip_address">192.168.1.7</string>

    <string name="speech_pitch">1.0</string>
    <string name="speech_speed">1.0</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="teclado">Teclado</string>
    <string name="ligar">Ligar</string>
    <string name="desligar">Desligar</string>
    <string name="ler_ecr">Ler ecrã</string>
    <string name="ler_ecra">Ler Ecrã</string>
    <string name="connect">Connect</string>
    <string name="parar_voz">Parar Voz</string>
    <string name="start_speech">Comando de Voz</string>
    <string name="voltar">Voltar</string>
    <string name="localizar">Localizar</string>
    <string name="cima">Cima</string>
    <string name="esquerda">Esquerda</string>
    <string name="ok">ok</string>
    <string name="_ok">OK</string>
    <string name="direita">direita</string>
    <string name="_direita">Direita</string>
    <string name="baixo">baixo</string>
    <string name="_baixo">Baixo</string>
    <string name="interact">Interact</string>
    <string name="reading">Reading</string>
    <string name="sim">SIM</string>
</resources>
