<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:clickable="false"
    android:longClickable="false"
    android:nestedScrollingEnabled="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".A4TVMainActivity"
    tools:showIn="@layout/activity_a4_tvmain">

    <ToggleButton
        android:id="@+id/toggleKEYB"
        android:layout_width="120dp"
        android:layout_height="120dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginStart="180dp"
        android:layout_marginTop="1113dp"
        android:checked="false"
        android:clickable="false"
        android:text="@string/teclado"
        android:textOff="@string/ligar"
        android:textOn="@string/desligar"
        android:visibility="invisible" />


    <FrameLayout
        android:id="@+id/touch_view_tests"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="500dp">

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/touchLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:importantForAccessibility="no"
        android:translationZ="100dp">

        <Button
            android:id="@+id/btnReadScreen"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@android:color/background_light"
            android:contentDescription="@string/ler_ecr"
            android:importantForAccessibility="yes"
            android:longClickable="false"
            android:text="@string/ler_ecra"
            android:textSize="18sp"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignStart="@+id/btnREPEAT"
            android:layout_alignTop="@+id/btnConnect"
            android:background="@android:color/background_light"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:importantForAccessibility="yes"
            android:longClickable="false"
            android:text="@string/back"
            android:textSize="18sp"
            android:translationZ="200dp" />

        <ToggleButton
            android:id="@+id/btnConnect"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btnSpeech"
            android:layout_marginBottom="32dp"
            android:background="@android:color/background_light"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:importantForAccessibility="yes"
            android:longClickable="false"
            android:text="@string/connect"
            android:textOff="@string/ligar"
            android:textOn="@string/desligar"
            android:textSize="18sp"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnSpeech"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/btnRIGHT"
            android:backgroundTint="@android:color/background_light"
            android:contentDescription="@string/start_speech"
            android:importantForAccessibility="yes"
            android:longClickable="false"
            android:text="@string/start_speech"
            android:textSize="18sp"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnREPEAT"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:backgroundTint="@android:color/background_light"
            android:contentDescription="@string/localizar"
            android:importantForAccessibility="yes"
            android:longClickable="false"
            android:text="@string/localizar"
            android:textSize="18sp"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnUP"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="101dp"
            android:backgroundTint="@android:color/background_light"
            android:contentDescription="@string/cima"
            android:importantForAccessibility="yes"
            android:longClickable="false"
            android:text="@string/cima"
            android:textSize="18sp"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnLEFT"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignStart="@+id/btnBack"
            android:layout_below="@+id/btnUP"
            android:backgroundTint="@android:color/background_light"
            android:contentDescription="@string/esquerda"
            android:importantForAccessibility="yes"
            android:longClickable="false"
            android:text="@string/esquerda"
            android:textSize="18sp"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/btnUP"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@android:color/background_light"
            android:contentDescription="@string/ok"
            android:importantForAccessibility="yes"
            android:longClickable="false"
            android:text="@string/ok"
            android:textSize="18sp"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnRIGHT"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/btnUP"
            android:layout_marginEnd="13dp"
            android:backgroundTint="@android:color/background_light"
            android:contentDescription="@string/direita"
            android:importantForAccessibility="yes"
            android:longClickable="false"
            android:text="@string/direita"
            android:textSize="18sp"
            android:translationZ="200dp" />

        <Button
            android:id="@+id/btnDOWN"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="113dp"
            android:backgroundTint="@android:color/background_light"
            android:contentDescription="@string/baixo"
            android:importantForAccessibility="yes"
            android:longClickable="false"
            android:text="@string/baixo"
            android:textSize="18sp"
            android:translationZ="200dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnBACK"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="967dp"
        android:background="@android:color/background_light"
        android:text="@string/back"
        android:visibility="invisible" />


    <ToggleButton
        android:id="@+id/modeBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1113dp"
        android:checked="false"
        android:enabled="false"
        android:focusable="false"
        android:text="@string/connect"
        android:textOff="@string/interact"
        android:textOn="@string/reading" />

    <TextView
        android:id="@+id/contentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/toggleKEYB"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
